crates/check_cli/tests/snapshots/main_cases_html/should_error_when_interpolation_is_disabled.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<div>{{ $interpolation }}</div>

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.html
  


```

# Emitted Messages

```block
file.html:1:6 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Text expressions aren't supported.
  
  > 1 │ <div>{{ $interpolation }}</div>
      │      ^^^^^^^^^^^^^^^^^^^^
    2 │ 
  
  i Remove it or enable the parsing using the html.parser.textExpression option.
  

```

```block
file.html format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
