crates/check_cli/tests/snapshots/main_cases_html/should_not_error_when_interpolation_is_enabled.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "html": {
    "parser": {
      "interpolation": true
    },
    "formatter": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<div>{{ $interpolation }}</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
